# car-racing-v2

./: README.md  evaluate.py  pyproject.toml  train.py
logs/: evaluations.npz
training/logs/PPO_1/: events.out.tfevents.1729344528.Patricks-MacBook-Pro-2.local.65254.0  events.out.tfevents.1729794099.Patricks-MacBook-Pro-2.local.7765.0
training/logs/PPO_2/: events.out.tfevents.1729346336.Patricks-MacBook-Pro-2.local.85041.0  events.out.tfevents.1729839862.hazy-rain-wanders-fin-01.30869.0
training/logs/PPO_3/: events.out.tfevents.1729841564.hazy-rain-wanders-fin-01.30961.0
