[tool.poetry]
name = "car-racing-v2"
version = "0.1.0"
description = ""
authors = ["Patrick Kalkman <patrick@simpletechture.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.1"
stable-baselines3 = "2.0.0"
gymnasium = {version = "0.28.1", extras = ["box2d"]}
tensorboard = "2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
