[tool.poetry]
name = "car-racing-v2"
version = "0.1.0"
description = ""
authors = ["Patrick Kalkman <patrick@simpletechture.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.1"
stable-baselines3 = {extras = ["extra"], version = "^2.3.2"}
gymnasium = {version = "0.28.1", extras = ["box2d"]}
tensorboard = "2.10.1"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
